--- a/index.html
+++ b/index.html
@@ -1239,7 +1239,7 @@ Feugiat scelerisque varius morbi enim nunc faucibus a pellentesque?
     <!-- link jqery -->
    <script src="./js/jquery-3.7.1.min.js"></script>
    <!--  link owl plugin -->
-   <script src="./OwlCarousel2-2.3.4/dist/owl.carousel.min.js"></script>
+   <script src="./js/owl.carousel.min.js"></script>
     <script src="./js/index.js"></script>
   </body>
 </html>
