--- a/index.html
+++ b/index.html
@@ -60,13 +60,13 @@
               <a class="nav-link" href="#about">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Services</a>
+              <a class="nav-link" href="#services">Services</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Portfolio</a>
+              <a class="nav-link" href="#protifolio"">Portfolio</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Team</a>
+              <a class="nav-link" href="#team">Team</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">Blog</a>
@@ -111,7 +111,7 @@
               </ul>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Contact</a>
+              <a class="nav-link" href="#contactUs">Contact</a>
             </li>
             <li class="nav-item">
               <a class="btn btn-primary px-4" href="#">Get Start</a>
@@ -485,11 +485,11 @@
 <!-- start pricing -->
          <section id="pricing">
           <div class="container title text-center my-3 ">
-            <h2 class="h5 d-inline-block">SERVICES</h2>
+            <h2 class="h5 d-inline-block">PRICING</h2>
             <h3 class="pb-3">Check Our Affordable Pricing</h3>
           </div>
           <div class="container">
-            <div class="row">
+            <div class="row gy-4">
               <div class="col-md-3">
                 <div class="inner shadow p-5 text-center">
                   <h3 class="inner-green">Free Plan</h3>
@@ -925,7 +925,7 @@ Feugiat scelerisque varius morbi enim nunc faucibus a pellentesque?
             <h3 class="pb-3">Our hard working team</h3>
           </div>
           <div class="container">
-            <div class="row py-4">
+            <div class="row py-4 gy-3">
               <div class="col-md-3">
                 <div class="inner shadow ">
                   <picture >
