--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <!-- style sheet -->
     <link rel="stylesheet" href="./css/style.css" />
   </head>
-  <body class="position-relative">
+  <body class="position-relative" >
     <div class="loading">
       <span class="loader"></span>
     </div>
@@ -1026,11 +1026,11 @@ Feugiat scelerisque varius morbi enim nunc faucibus a pellentesque?
           </div>
           <div class="container">
             <div class="owl-carousel owl-theme">
-              <div class="item"><img src="./imgs/client-1.png" alt="" class=" w-50" ></div>
-              <div class="item"><img src="./imgs/client-5.png" alt="" class="w-50"></div>
-              <div class="item"><img src="./imgs/client-1.png" alt="" class="w-50"></div>
-              <div class="item"><img src="./imgs/client-7.png" alt="" class="w-50"></div>
-              <div class="item"><img src="./imgs/client-6.png" alt="" class="w-50"></div>
+              <div class="item"><img src="./imgs/client-1.png" alt="" class=" w-75" ></div>
+              <div class="item"><img src="./imgs/client-5.png" alt="" class="w-75"></div>
+              <div class="item"><img src="./imgs/client-1.png" alt="" class="w-75"></div>
+              <div class="item"><img src="./imgs/client-7.png" alt="" class="w-75"></div>
+              <div class="item"><img src="./imgs/client-6.png" alt="" class="w-75"></div>
               
            
           </div>
@@ -1214,6 +1214,52 @@ Feugiat scelerisque varius morbi enim nunc faucibus a pellentesque?
           <form  class="name-form">
             <div class="letter-form"><input type="text" class="form-control"><input type="submit" class="btn btn-primary" value="Subscribe"></div>
           </form>
+        </div>
+      </div>
+    </div>
+  </div>
+ </footer>
+ <footer class="footer-midd">
+  <div class="container">
+    <div class="row gy-3">
+      <div class="col-md-4">
+        <h3>FlexStart</h3>
+        <p>A108 Adam Street</p>
+        <p>New York, NY 535022</p>
+        <p><strong>Phone: </strong>+1 5589 55488 55</p>
+        <p><strong>Email: </strong>info@example.com</p>
+      </div>
+      <div class="col-md-4">
+        <div class="row">
+          <div class="col-md-6 links-home">
+            <h4 class="h5">Useful Links</h4>
+            <p  class="text-muted"><i class="fa-solid fa-chevron-right  pe-1"></i><span><a href="#">Home</a></span></p>
+            <p class="text-muted"><i class="fa-solid fa-chevron-right pe-1"></i><span><a href="#about">About</a></span></p>
+            <p class="text-muted"><i class="fa-solid fa-chevron-right pe-1"></i><span><a href="#services">Services</a></span></p>
+            <p class="text-muted"><i class="fa-solid fa-chevron-right pe-1"></i><span><a href="#">Terms of service</a></span></p>
+          </div>
+          <div class="col-md-5 offset-md-1 links-services">
+            <h4 class="h5">Our Services</h4>
+            <p class="text-muted"><i class="fa-solid fa-chevron-right  pe-1"></i><span><a href="#">Web Design</a></span></p>
+            <p class="text-muted"><i class="fa-solid fa-chevron-right pe-1"></i><span><a href="">Web Development</a></span></p>
+            <p class="text-muted"><i class="fa-solid fa-chevron-right pe-1"></i><span><a href="">Product Management</a></span></p>
+            <p class="text-muted"><i class="fa-solid fa-chevron-right pe-1"></i><span><a href="">Markting</a></span></p>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-3 offset-md-1">
+        <h5 class="h6 follow">Follow Us</h5>
+        <p>Cras fermentum odio eu feugiat lide par naso tierra videa magna derita valies</p>
+        <div class="icon">
+            <ul class="list-unstyled d-flex py-4 ">
+            <li> <a href=""><i class="fa-brands fa-facebook-f ps-3"></i></a>
+          </li>
+          <li> <a href=""><i class="fa-brands fa-twitter ps-3"></i></a>
+          </li>
+          <li> <a href=""><i class="fa-brands fa-instagram ps-3"></i></a>
+          </li>
+          <li> <a href=""><i class="fa-brands fa-linkedin ps-3"></i></a>
+          </li></ul>
         </div>
       </div>
     </div>
