--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <!-- style sheet -->
     <link rel="stylesheet" href="./css/style.css" />
   </head>
-  <body class="position-relative" >
+  <body class="position-relative overflow-x-hidden" >
     <div class="loading">
       <span class="loader"></span>
     </div>
